# QtBasicFeaturesDemo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  testcsv.csv
lib/Qt_6_8_2/lib/: Qt6BundledFreetype.lib  Qt6BundledFreetyped.lib  Qt6BundledLibjpeg.lib  Qt6BundledLibjpegd.lib  Qt6BundledLibpng.lib  Qt6BundledLibpngd.lib  Qt6Concurrent.lib  Qt6Core.lib  Qt6Cored.lib  Qt6DBus.lib  Qt6DBusd.lib  Qt6DeviceDiscoverySupport.lib  Qt6DeviceDiscoverySupportd.lib  Qt6EntryPoint.lib  Qt6EntryPointd.lib  Qt6ExampleIcons.lib  Qt6ExampleIconsd.lib  Qt6ExamplesAssetDownloader.lib  Qt6FbSupport.lib  Qt6FbSupportd.lib  Qt6Gui.lib  Qt6Guid.lib  Qt6Network.lib  Qt6Networkd.lib  Qt6OpenGLWidgets.lib  Qt6OpenGLWidgetsd.lib  Qt6PrintSupport.lib  Qt6PrintSupportd.lib  Qt6Sql.lib  Qt6Sql.prl  Qt6Sqld.lib  Qt6Sqld.prl  Qt6Test.lib  Qt6Testd.lib  Qt6Widgets.lib  Qt6Widgetsd.lib  Qt6Xml.lib  Qt6Xmld.lib
lib/Qt_6_8_2/mkspecs/: qconfig.pri  qmodule.pri
lib/Qt_6_8_2/modules/: Concurrent.json  Core.json  DBus.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  ExampleIconsPrivate.json  ExamplesAssetDownloaderPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  JpegPrivate.json  Network.json  OpenGL.json  OpenGLWidgets.json  PngPrivate.json  PrintSupport.json  Sql.json  Test.json  Widgets.json  Xml.json  ZlibPrivate.json
lib/Qt_6_8_2/sbom/: qtbase-6.8.2.spdx
src/: CMakeLists.txt
src/App/: Application.cpp  ApplicationPy.cpp  ComplexGeoDataPyImp.cpp  DocumentObjectPy.xml  DocumentObjectPyImp.cpp  DocumentPy.xml  DocumentPyImp.cpp  FeaturePython.cpp  PropertyContainerPyImp.cpp  PropertyStandard.cpp
src/BioSenseMain/: BioSenseGuiMain.cpp  CMakeLists.txt  CSVHelper.cpp  CSVHelper.h  DataInput.cpp  DataInput.h  DataInputModule.cpp  DataInputModule.h  DataInputViewModel.cpp  DataInputViewModel.h  DataSave.cpp  DataSave.h  DataSaveModule.cpp  DataSaveModule.h  DataSaveViewModel.cpp  DataSaveViewModel.h  FeatureExtraction.cpp  FeatureExtraction.h  FeatureExtractionModule.cpp  FeatureExtractionModule.h  FeatureExtractionViewModel.cpp  FeatureExtractionViewModel.h  Resources.qrc  SignalPreprocessModule.cpp  SignalPreprocessModule.h  SignalPreprocessViewModel.cpp  SignalPreprocessViewModel.h  SignalPreprocessor.cpp  SignalPreprocessor.h  SignalPreprocessorModule.cpp  StateEvaluation.cpp  StateEvaluationModule.cpp  StateEvaluationModule.h  StateEvaluationViewModel.cpp  StateEvaluationViewModel.h  UI.qml  VisualizationAnalysis.cpp  VisualizationAnalysisModule.cpp  VisualizationAnalysisModule.h  VisualizationAnalysisViewModel.cpp  (+1 more)
src/BioSenseMain/UI/: DataImportPage.qml  DataSavePage.qml  FeatureExtractPage.qml  LineChartView.qml  Main.qml  Resources.qrc  SignalPreprocessPage.qml  StatusAssessmentPage.qml  VisualizationPage.qml
src/BioSenseMain/UI/QML/: DataImportPage.qml  DataSavePage.qml  FeatureExtractPage.qml  LineChartView.qml  Main.qml  MainContentArea.qml  SearchBar.qml  SideTabBar.qml  SignalPreprocessPage.qml  StatusAssessmentPage.qml  TabButton.qml  VisualizationPage.qml
src/Demo/: DemoMain.cpp  DemoMain.h
src/DemoMain/: CMakeLists.txt  CSVHelper.cpp  CSVHelper.h  DemoMain.cpp  DemoMain.h
src/Gui/: Splashscreen.cpp
src/Main/: CMakeLists.txt  CSVHelper.cpp  CSVHelper.h  MainGui.cpp
src/Qt/: CMakeLists.txt
src/Qt/QtCore/: CMakeLists.txt  c89-qplatformdefs.h  cstrfuns.cpp  cstrfuns.h  moc_qbuffer.cpp  moc_qcalendar.cpp  moc_qcoreapplication.cpp  moc_qcoreevent.cpp  moc_qeventloop.cpp  moc_qfile.cpp  moc_qfiledevice.cpp  moc_qfuturewatcher.cpp  moc_qiodevice.cpp  moc_qlocale.cpp  moc_qobject.cpp  moc_qtextstream_p.cpp  moc_qthread.cpp  moc_qthreadpool.cpp  moc_qtimer.cpp  moc_qtranslator.cpp  q20algorithm.h  q20chrono.h  q20functional.h  q20iterator.h  q20map.h  q20memory.h  q20type_traits.h  q20vector.h  q23functional.h  q23utility.h  q26numeric.h  qabstractanimation.h  qabstractbutton.h  qabstracteventdispatcher.h  qabstractfileiconprovider.h  qabstractitemdelegate.h  qabstractitemmodel.h  qabstractitemmodeltester.h  qabstractitemview.h  qabstractnativeeventfilter.h  (+1100 more)
src/Qt/QtCore/private/: qabstractanimation_p.h  qabstractbutton_p.h  qabstracteventdispatcher_p.h  qabstractfileengine_p.h  qabstractfileiconengine_p.h  qabstractfileiconprovider_p.h  qabstractitemdelegate_p.h  qabstractitemmodel_p.h  qabstractitemview_p.h  qabstractlayoutstyleinfo_p.h  qabstractnetworkcache_p.h  qabstractprintdialog_p.h  qabstractprotocolhandler_p.h  qabstractproxymodel_p.h  qabstractscrollarea_p.h  qabstractslider_p.h  qabstractsocket_p.h  qabstractsocketengine_p.h  qabstractspinbox_p.h  qabstracttestlogger_p.h  qabstracttextdocumentlayout_p.h  qaccessiblebridgeutils_p.h  qaccessiblecache_p.h  qaccessiblemenu_p.h  qaccessiblewidgetfactory_p.h  qaccessiblewidgets_p.h  qaction_widgets_p.h  qactiongroup_p.h  qandroidextras_p.h  qandroiditemmodelproxy_p.h  qandroidmodelindexproxy_p.h  qandroidstyle_p.h  qandroidtypeconverter_p.h  qandroidtypes_p.h  qanimationgroup_p.h  qappleiconengine_p.h  qapplekeymapper_p.h  qappletestlogger_p.h  qapplication_p.h  qasn1element_p.h  (+764 more)
src/Qt/QtCore/test/: src_corelib_text_qbytearray.cpp
src/Qt/QtGui/: qicon.h
src/ZLib/: CMakeLists.txt  deflate.c
test/: testcsv.csv
test/data/: 120_test_data_points.csv  20250116rcd84d7677220250116095027_p1.csv  20250116rcd84d7677220250116095123_p1_test.csv
test/data/20250116/: 20250116rcd84d7677220250116095123_p1.csv  20250116rcd84d7677220250116095157_p2.csv  20250116rcd84d7677220250116095228_p3.csv  20250116rcd84d7677220250116095258_p4.csv  20250116rcd84d7677220250116095712_p1.csv  20250116rcd84d7677220250116095748_p2.csv  20250116rcd84d7677220250116095827_p1.csv  20250116rcd84d7677220250116095901_p2.csv  20250116rcd84d7677220250116095959_p1.csv  20250116rcd84d7677220250116100034_p2.csv  20250116rcd84d7677220250116100136_p1.csv  20250116rcd84d7677220250116100210_p2.csv  20250116rcd84d7677220250116100240_p3.csv  20250116rcd84d7677220250116101001_p1.csv  20250116rcd84d7677220250116101035_p2.csv  20250116rcd84d7677220250116101106_p3.csv  (+45 more)
(+62 files in other folders)
