
# Add the subdirectory for the main demo application
# This is where the main application code will be located
add_subdirectory(DemoMain)

# Add the subdirectory for the Qt modules
# This is where the Qt modules will be located
add_subdirectory(Qt)

# Add the subdirectory for the bundled ZLib library
# This is where the bundled ZLib library will be located
add_subdirectory(ZLib)
